feat: improve diapay sandbox developer experience docs and sdk
